--- a/src/components/Nav/nav.css
+++ b/src/components/Nav/nav.css
@@ -1,8 +1,9 @@
 .content-all-navigation{
-    background-color: black;
+    background :rgba(0,0,0,0.9);
     width: 100%;
     display: flex;
     justify-content: space-around;
+    position: fixed;
 }
 .nav-title{
     display: flex;
@@ -56,7 +57,6 @@
     color: white;
     font-size: 25px;
     position: absolute;
-    right: 20px;
     top: 24px;
 }
 
@@ -88,6 +88,7 @@
     .burguer-menu{
         display: block;
         cursor: pointer;
+        left: 300px;
     }
 
     .nav-title{
