--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -1,7 +1,7 @@
 .content-all-home{
     padding-top: 100px;
     height: 90vh;
-    font-family: 'Anton', sans-serif;
+    font-family: 'Montserrat', sans-serif;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -23,7 +23,7 @@
 }
 
 .me{
-    font-size: 30px;
+    font-size: 26px;
     color: white;
 }
 
@@ -44,5 +44,9 @@
 
     .img-home{
         width: 190px;
+    }
+
+    .me{
+        padding: 0 8px;
     }
 }
