se agrega el footer

--- a/src/components/Contact/contact.css
+++ b/src/components/Contact/contact.css
@@ -5,7 +5,7 @@
     background-position: center;
     background: #000000;
     color: white;
-   
+    padding-bottom: 30px;
 }
 
 .content-contact{
