--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -49,4 +49,10 @@
         flex-direction: column;
         padding-top: 30px;
     }
+
+    .content-me{
+        margin-left: 10px;
+        margin-right: 10px;
+    }
 }
+
