--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -14,7 +14,6 @@
     display: block;
     font-size: 36px;
     color: #ffffff;
-    border: 2px solid #98FF98
 }
 
 .about{
@@ -28,6 +27,7 @@
     font-size: 30px;
     margin-left: 40px;
     margin-right: 40px;
+    
 }
 
 .skill-me{
@@ -41,6 +41,10 @@
     margin-left: 30px;
     margin-right: 30px;
     font-size: 25px;
+}
+
+.border-green{
+    border: 2px solid #98FF98
 }
 
 
